--- a/styles.css
+++ b/styles.css
@@ -24,6 +24,19 @@ header{
     padding-bottom: 2px;
 }
 
+nav{
+    background-color: black;
+    color: white;
+}
+
+nav a{
+    color: white;
+}
+
+nav a:hover{
+    color: #959595;
+}
+
 #home{
     background-image: url("background13.png");
     background-size: contain;
@@ -48,7 +61,6 @@ header{
 
 #title h4{
     margin-left: 50px;
-
 }
 
 
@@ -57,10 +69,40 @@ header{
 }
 
 #music .music{
+    background-color: #262626;
     margin: 15px 30px;
+}
+
+#music .iframe{
+    height: 299px;
 }
 
 #music iframe{
     width: 100%;
     height: 300px;
+}
+
+#footer{
+    background-image: url("navbar.gif");
+    padding-top: 2px;
+}
+
+
+footer {
+    background-color: black;
+    padding: 20px 0 40px;
+}
+footer span{
+    text-align: center;
+}
+footer img {
+    width: 70px;
+}
+
+footer a{
+    color: white;
+}
+
+footer a:hover{
+    color: white;
 }
