--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,7 @@ header{
 }
 
 nav{
-    background-color: black;
+    background-color: #14181c;
     color: white;
 }
 
@@ -69,7 +69,7 @@ nav a:hover{
 }
 
 #music .music{
-    background-color: #262626;
+    background-color: #272c36;
     margin: 15px 30px;
 }
 
@@ -89,7 +89,7 @@ nav a:hover{
 
 
 footer {
-    background-color: black;
+    background-color: #14181c;
     padding: 20px 0 40px;
 }
 footer span{
