--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,12 @@
 body{
     color: white;
     background-color: #1E2329;
-    font-family: 'Share Tech Mono', monospace;
+    font-family: 'Inria Sans', sans-serif;
 }
 
-
+.title{
+    font-family: 'Share Tech Mono', monospace;
+}
 
 .container {
     max-width: 1060px;
@@ -20,7 +22,7 @@ body{
 
 
 header{
-    background-image: url("navbar.gif");
+    background-image: url("https://tyrolium.fr/Contenu/Image/navbar.gif");
     padding-bottom: 2px;
 }
 
@@ -38,7 +40,7 @@ nav a:hover{
 }
 
 #home{
-    background-image: url("background13.png");
+    background-image: url("https://tyrolium.fr/Contenu/Image/background13.png");
     background-size: contain;
     background-position: center;
 
@@ -127,7 +129,7 @@ nav a:hover{
 
 
 #footer{
-    background-image: url("navbar.gif");
+    background-image: url("https://tyrolium.fr/Contenu/Image/navbar.gif");
     padding-top: 2px;
 }
 
