--- a/styles.css
+++ b/styles.css
@@ -1,154 +1,38 @@
+
 body{
+    background-color: #343a40;
     color: white;
-    background-color: #1E2329;
-    font-family: 'Inria Sans', sans-serif;
+    font-family: 'Ubuntu', sans-serif;
 }
 
-.title{
-    font-family: 'Share Tech Mono', monospace;
+h2#title{
+    margin-top: 10px;
 }
-
-.container {
-    max-width: 1060px;
-    margin-left: auto;
-    margin-right: auto;
+p#change{
+    margin-top: 10px;
 }
-@media (max-width: 767px) {
-    .container {
-        width: 90%;
-    }
-}
-
-
-
-header{
-    background-image: url("https://tyrolium.fr/Contenu/Image/navbar.gif");
-    padding-bottom: 2px;
-}
-
-nav{
-    background-color: #14181c;
-    color: white;
-}
-
-nav a{
-    color: white;
-}
-
-nav a:hover{
-    color: #959595;
-}
-
-#home{
-    background-image: url("https://tyrolium.fr/Contenu/Image/background13.png");
-    background-size: contain;
-    background-position: center;
-
-}
-
-#home article{
-    text-align: center;
-    background-color: #1E2329;
+main{
+    background-color: white;
+    color: black;
     margin-left: 10%;
     margin-right: 10%;
-    padding: 50px 15px;
-    box-shadow: 0px 5px 17px black;
-}
-
-
-#title h2 {
-    margin-top: 60px;
-    color:  white;
-    margin-left: -30px;
-}
-#music{
-    margin-top: 50px;
-    margin-bottom: 100px;
-}
-
-#music .row{
-    margin: unset;
-}
-
-#music .music{
-    background-color: #272c36;
-    margin: 15px 0px;
-}
-
-#music .iframe{
-    height: 299px;
-}
-
-#music iframe{
-    width: 100%;
-    height: 300px;
-}
-
-
-
-
-
-
-#nosreseau h2 {
-    margin-top: 60px;
-    color:  white;
-    margin-left: -30px;
-}
-#nosreseau ul {
-    padding: 50px 0;
-    display: flex;
-    text-align: center;
-    justify-content: space-between;
-
-}
-#nosreseau ul li {
-    background: linear-gradient(#0034ff, #01256a);
-    margin: 10px;
-    box-shadow: 2px 3px 8px rgba(0, 0, 0, 0.3);
+    margin-top: 30px;
     padding: 20px;
+    border-radius: 14px;
 }
-
-#nosreseau ul li#discord {
-    background: linear-gradient(#f11fff, #85008e);
-}
-#nosreseau ul li h3{
-    font-weight: bold;
-    padding: 20px;
-}
-
-#nosreseau img.imgRe{
-    width: 50px;
-    height: 50px;
-}
-
-#nosreseau a:hover{
-    color: white;
-}
-
-
-
-
-#footer{
-    background-image: url("https://tyrolium.fr/Contenu/Image/navbar.gif");
-    padding-top: 2px;
-}
-
-
-footer {
-    background-color: #14181c;
-    padding: 20px 0 40px;
-}
-footer span{
+main p{
     text-align: center;
 }
-footer img {
-    width: 70px;
+main h3{
+    text-decoration: underline;
 }
-
-footer a{
-    color: white;
+main h4{
+    text-align: center
 }
-
-footer a:hover{
-    color: white;
+main ul{
+    margin-left: 100px;
+}
+main a{
+    text-decoration:none;
+    color: black;
 }
