--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,154 @@
-
 body{
-    background-color: #343a40;
     color: white;
-    font-family: 'Ubuntu', sans-serif;
+    background-color: #1E2329;
+    font-family: 'Inria Sans', sans-serif;
 }
 
-h2#title{
-    margin-top: 10px;
+.title{
+    font-family: 'Share Tech Mono', monospace;
 }
-p#change{
-    margin-top: 10px;
+
+.container {
+    max-width: 1060px;
+    margin-left: auto;
+    margin-right: auto;
 }
-main{
-    background-color: white;
-    color: black;
+@media (max-width: 767px) {
+    .container {
+        width: 90%;
+    }
+}
+
+
+
+header{
+    background-image: url("https://tyrolium.fr/Contenu/Image/navbar.gif");
+    padding-bottom: 2px;
+}
+
+nav{
+    background-color: #14181c;
+    color: white;
+}
+
+nav a{
+    color: white;
+}
+
+nav a:hover{
+    color: #959595;
+}
+
+#home{
+    background-image: url("https://tyrolium.fr/Contenu/Image/background13.png");
+    background-size: contain;
+    background-position: center;
+
+}
+
+#home article{
+    text-align: center;
+    background-color: #1E2329;
     margin-left: 10%;
     margin-right: 10%;
-    margin-top: 30px;
-    padding: 20px;
-    border-radius: 14px;
+    padding: 50px 15px;
+    box-shadow: 0px 5px 17px black;
 }
-main p{
+
+
+#title h2 {
+    margin-top: 60px;
+    color:  white;
+    margin-left: -30px;
+}
+#music{
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
+#music .row{
+    margin: unset;
+}
+
+#music .music{
+    background-color: #272c36;
+    margin: 15px 0px;
+}
+
+#music .iframe{
+    height: 299px;
+}
+
+#music iframe{
+    width: 100%;
+    height: 300px;
+}
+
+
+
+
+
+
+#nosreseau h2 {
+    margin-top: 60px;
+    color:  white;
+    margin-left: -30px;
+}
+#nosreseau ul {
+    padding: 50px 0;
+    display: flex;
+    text-align: center;
+    justify-content: space-between;
+
+}
+#nosreseau ul li {
+    background: linear-gradient(#0034ff, #01256a);
+    margin: 10px;
+    box-shadow: 2px 3px 8px rgba(0, 0, 0, 0.3);
+    padding: 20px;
+}
+
+#nosreseau ul li#discord {
+    background: linear-gradient(#f11fff, #85008e);
+}
+#nosreseau ul li h3{
+    font-weight: bold;
+    padding: 20px;
+}
+
+#nosreseau img.imgRe{
+    width: 50px;
+    height: 50px;
+}
+
+#nosreseau a:hover{
+    color: white;
+}
+
+
+
+
+#footer{
+    background-image: url("https://tyrolium.fr/Contenu/Image/navbar.gif");
+    padding-top: 2px;
+}
+
+
+footer {
+    background-color: #14181c;
+    padding: 20px 0 40px;
+}
+footer span{
     text-align: center;
 }
-main h3{
-    text-decoration: underline;
+footer img {
+    width: 70px;
 }
-main h4{
-    text-align: center
+
+footer a{
+    color: white;
 }
-main ul{
-    margin-left: 100px;
-}
-main a{
-    text-decoration:none;
-    color: black;
+
+footer a:hover{
+    color: white;
 }
