--- a/styles.css
+++ b/styles.css
@@ -13,9 +13,25 @@ body{
     margin-left: auto;
     margin-right: auto;
 }
-@media (max-width: 767px) {
+
+/************************************
+MEDIA QUERY
+************************************/
+@media (max-width:768px) {
+    /**CLASS GLOBALES**/
     .container {
-        width: 90%;
+        max-width: 90%;
+    }
+
+    /**STYLE PAR SECTION**/
+}
+@media (max-width: 1090px) {
+
+    #nosreseau ul {
+        flex-direction: column;
+    }
+    #nosreseau ul li {
+        width: 100%;
     }
 }
 
@@ -41,7 +57,7 @@ nav a:hover{
 
 #home{
     background-image: url("https://tyrolium.fr/Contenu/Image/background13.png");
-    background-size: contain;
+    background-size: cover;
     background-position: center;
 
 }
@@ -55,11 +71,29 @@ nav a:hover{
     box-shadow: 0px 5px 17px black;
 }
 
+@media (max-width: 700px) {
+    #home article{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
+
+@media (max-width: 494px) {
+    #home article{
+        width: 100%;
+    }
+}
+
 
 #title h2 {
     margin-top: 60px;
     color:  white;
     margin-left: -30px;
+}
+@media (max-width: 1085px) {
+    #title h2 {
+        margin-left: 0px;
+    }
 }
 #music{
     margin-top: 50px;
@@ -104,6 +138,13 @@ nav a:hover{
     color:  white;
     margin-left: -30px;
 }
+
+@media (max-width: 1085px) {
+    #nosreseau h2 {
+        margin-left: 0px;
+    }
+}
+
 #nosreseau ul {
     padding: 50px 0;
     display: flex;
