--- a/styles.css
+++ b/styles.css
@@ -121,6 +121,12 @@ nav a:hover{
     font-weight: bold;
 }
 
+#title button.btn{
+    background-color: #0000a3;
+    margin-right: 4px;
+    border: 1px solid #00007e;
+}
+
 #title h2 {
     margin-top: 60px;
     color:  white;
@@ -269,8 +275,9 @@ footer a:hover{
 }
 
 
-footer button.btn{
+footer button.btn-primary{
     background-color: #0000a3;
+    border: 1px solid #00007e;
 }
 
 
